Wed Jul 13 01:25:17 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/database.h,include/xapian/dbfactory.h,
	  net/socketclient.cc: Regularise horizontal whitespace.

Tue Jul 05 03:03:57 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Oops, failed to check in header
	  changes for last change.

Mon Jul 04 15:50:55 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,queryparser/queryparser.cc:
	  Add flag FLAG_BOOLEAN_ANY_CASE which tells the QueryParser that
	  boolean operators such as "AND", "OR", and "NEAR" should be
	  recognised even if they aren't fully capitalised (so "and",
	  "And", "aNd", etc will work too).  Add flag FLAG_WILDCARD which
	  tells the QueryParser to allow right truncation e.g. "xap*".
	* tests/queryparsertest.cc: Add tests for FLAG_WILDCARD.

Sun Jul 03 15:24:12 BST 2005  Olly Betts <olly@survex.com>

	* backends/database.cc: Fixed to auto-detect database type when
	  opening an existing Flint database as a WritableDatabase.

Sat Jul 02 18:49:22 BST 2005  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add test case: "-site:xapian.org mail".

Sat Jul 02 18:49:03 BST 2005  Olly Betts <olly@survex.com>

	* common/Makefile.am: Ship safewindows.h header.

Sat Jul 02 18:04:18 BST 2005  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc,bin/xapian-compact.cc,
	  backends/muscat36/io_system.cc,backends/quartz/btree.cc,
	  backends/quartz/quartz_log.cc,backends/quartz/quartz_database.cc,
	  backends/flint/,common/,net/,tests/,testsuite/backendmanager.cc,
	  testsuite/testsuite.cc: Assorted tweaks towards allowing
	  compilation with MSVC.

Sat Jul 02 05:08:54 BST 2005  Olly Betts <olly@survex.com>

	* backends/quartz/: Always define WIN32_LEAN_AND_MEAN before
	  including windows.h to reduce the amount of stuff it includes
	  and speed up builds; Eliminate Btree::max_key_len as MSVC
	  doesn't like the way we define it and it actually seems