@@ -68,6 +68,8 @@ class RemoteSubMatch : public SubMatch {
 		       const Xapian::RSet & omrset,
 		       Xapian::valueno collapse_key,
 		       Xapian::Enquire::docid_order order,
+		       Xapian::valueno sort_key,
+		       bool sort_by_relevance, bool sort_value_forward,
 		       int percent_cutoff, Xapian::weight weight_cutoff,
 		       StatsGatherer *gatherer_, const Xapian::Weight *wtscheme);
 
